# fdroidswh

./: .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  indexLoader.go  indexModel.go  indexUpdater.go  main.go  main.py  pyproject.toml  query.sql  requirements.txt  saver.go  saver_test.go  schema.sql  swh.py  web.go
db/: models.go  query.sql.go
src/fdroid_push_swh/: __init__.py  db.py  git.py  main.py  swh.py
